--- a/client/src/components/card-admin/card-admin.styles.scss
+++ b/client/src/components/card-admin/card-admin.styles.scss
@@ -1,24 +1,25 @@
-@use '../../styles/base';
+@use '../../styles/mixins' as mixins;
+@use '../../styles/variables' as vars;
 
 .card-admin {
-  @include setwidthandheight(45vw, 80vh);
-  @include flexeddiv(column, center);
-  @include animation(left, 2s);
+  @include mixins.setwidthandheight(45vw, 80vh);
+  @include mixins.flexeddiv(column, center);
+  @include mixins.animation(left, 2s);
   border-radius: 30px;
   min-width: 717px;
-  background-color: $cardbackcolor;
+  background-color: vars.$cardbackcolor;
   position: absolute;
   top: 18%;
   left: -100%;
 
   .card-admin-main {
-    @include setwidthandheight(100%, 90%);
-    @include flexeddiv(row, space-between);
+    @include mixins.setwidthandheight(100%, 90%);
+    @include mixins.flexeddiv(row, space-between);
     bottom: 0;
     position: absolute;
 
     .card-search {
-      @include setborderwithradius(2px solid $seccardcolor, 30px);
+      @include mixins.setborderwithradius(2px solid vars.$seccardcolor, 30px);
       height: 90%;
       margin: 28px 2.5px 0 5px;
     }
@@ -29,7 +30,7 @@
   }
 
   &.expanded {
-    @include animation(left, 1s);
+    @include mixins.animation(left, 1s);
     left: 2%;
 
     @media screen and (orientation: portrait) {
@@ -43,11 +44,11 @@
 }
 
 .admin-btn-back {
-  @include animation(box-shadow, 0.3s);
-  @include setwidthandheight(55px, 55px);
-  @include setborderwithradius(1px solid $seccardcolor, 12px);
-  box-shadow: 0 0 5px $seccardcolor, 0 0 25px $seccardcolor;
-  background-color: $seccardcolor;
+  @include mixins.animation(box-shadow, 0.3s);
+  @include mixins.setwidthandheight(55px, 55px);
+  @include mixins.setborderwithradius(1px solid vars.$seccardcolor, 12px);
+  box-shadow: 0 0 5px vars.$seccardcolor, 0 0 25px vars.$seccardcolor;
+  background-color: vars.$seccardcolor;
   position: absolute;
   left: 20px;
   top: 1px;
@@ -60,8 +61,9 @@
   transform: scaleX(-1);
 
   &:hover {
-    background-color: pink;
-    border: 1px solid pink;
-    box-shadow: 0 0 5px pink, 0 0 25px pink, 0 0 50px pink;
+    background-color: vars.$tercardcolor;
+    border: 1px solid vars.$tercardcolor;
+    box-shadow: 0 0 5px vars.$tercardcolor, 0 0 25px vars.$tercardcolor,
+      0 0 50px vars.$tercardcolor;
   }
 }
