--- a/client/src/components/card-music/card-music.styles.scss
+++ b/client/src/components/card-music/card-music.styles.scss
@@ -1,14 +1,15 @@
-@use '../../styles/base';
+@use '../../styles/mixins' as mixins;
+@use '../../styles/variables' as vars;
 
 .card-music {
-  @include setwidthandheight(100%, 100%);
-  @include setborderwithradius(2px solid $primcardcolor, 52px);
-  @include flexeddiv(column, space-evenly);
-  background-color: $cardbackcolor;
+  @include mixins.setwidthandheight(100%, 100%);
+  @include mixins.setborderwithradius(2px solid vars.$primcardcolor, 52px);
+  @include mixins.flexeddiv(column, space-evenly);
+  background-color: vars.$cardbackcolor;
 
   .card-big-cover-container {
-    @include setwidthandheight(230px, 230px);
-    @include setborderwithradius(2px solid $primcardcolor, 20px);
+    @include mixins.setwidthandheight(230px, 230px);
+    @include mixins.setborderwithradius(2px solid vars.$primcardcolor, 20px);
     overflow: hidden;
     margin: 0 auto;
     background-repeat: no-repeat;
@@ -16,23 +17,23 @@
     background-position: center;
 
     img {
-      @include setwidthandheight(100%, 100%);
+      @include mixins.setwidthandheight(100%, 100%);
     }
 
     @media screen and (orientation: portrait) {
-      @include setwidthandheight(140px, 140px);
+      @include mixins.setwidthandheight(140px, 140px);
     }
   }
 
   .card-big-controls {
-    @include flexeddiv(row, space-around);
+    @include mixins.flexeddiv(row, space-around);
     padding: 0 20px;
     vertical-align: middle;
     border-radius: 20%;
 
     .card-big-control {
-      @include setwidthandheight(30%, 60px);
-      @include flexeddiv(row, center);
+      @include mixins.setwidthandheight(30%, 60px);
+      @include mixins.flexeddiv(row, center);
       vertical-align: middle;
 
       div {
