--- a/client/src/components/card-playlist/card-playlist.styles.scss
+++ b/client/src/components/card-playlist/card-playlist.styles.scss
@@ -1,30 +1,31 @@
-@use '../../styles/base';
+@use '../../styles/mixins' as mixins;
+@use '../../styles/variables' as vars;
 
 .card-playlist {
-  @include setwidthandheight(100%, 100%);
-  @include setborderwithradius(2px solid $seccardcolor, 52px);
-  @include flexeddiv(unset, center);
-  background-color: $cardbackcolor;
+  @include mixins.setwidthandheight(100%, 100%);
+  @include mixins.setborderwithradius(2px solid vars.$seccardcolor, 52px);
+  @include mixins.flexeddiv(unset, center);
+  background-color: vars.$cardbackcolor;
   align-items: center;
 
   .card-big-table {
-    @include setwidthandheight(90%, 90%);
-    @include setborderwithradius(unset, 3%);
+    @include mixins.setwidthandheight(90%, 90%);
+    @include mixins.setborderwithradius(unset, 3%);
     overflow-y: auto;
     color: white;
 
     &::-webkit-scrollbar {
-      @include setwidthandheight(12px, unset);
+      @include mixins.setwidthandheight(12px, unset);
     }
 
     &::-webkit-scrollbar-track {
-      @include setborderwithradius(unset, 10px);
+      @include mixins.setborderwithradius(unset, 10px);
       box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
       -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
     }
 
     &::-webkit-scrollbar-thumb {
-      @include setborderwithradius(unset, 10px);
+      @include mixins.setborderwithradius(unset, 10px);
       box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.5);
       -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.5);
     }
