--- a/client/src/components/card-radio-playlist/card-radio-playlist.styles.scss
+++ b/client/src/components/card-radio-playlist/card-radio-playlist.styles.scss
@@ -1,30 +1,31 @@
-@use '../../styles/base';
+@use '../../styles/mixins' as mixins;
+@use '../../styles/variables' as vars;
 
 .card-radio-playlist {
-  @include setwidthandheight(100%, 90%);
-  @include setborderwithradius(2px solid $primcardcolor, 30px);
-  @include flexeddiv(unset, center);
-  background-color: $cardbackcolor;
+  @include mixins.setwidthandheight(100%, 90%);
+  @include mixins.setborderwithradius(2px solid vars.$primcardcolor, 30px);
+  @include mixins.flexeddiv(unset, center);
+  background-color: vars.$cardbackcolor;
   align-items: center;
   margin: 28px 5px 0 2.5px;
   color: white;
 
   .card-big-table {
-    @include setwidthandheight(90%, 90%);
-    @include setborderwithradius(unset, 3%);
+    @include mixins.setwidthandheight(90%, 90%);
+    @include mixins.setborderwithradius(unset, 3%);
     overflow-y: auto;
 
     &::-webkit-scrollbar {
-      @include setwidthandheight(12px, unset);
+      @include mixins.setwidthandheight(12px, unset);
     }
 
     &::-webkit-scrollbar-track {
-      @include setborderwithradius(unset, 10px);
+      @include mixins.setborderwithradius(unset, 10px);
       -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     }
 
     &::-webkit-scrollbar-thumb {
-      @include setborderwithradius(unset, 10px);
+      @include mixins.setborderwithradius(unset, 10px);
       -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     }
   }
