--- a/client/src/components/card-search/card-search.styles.scss
+++ b/client/src/components/card-search/card-search.styles.scss
@@ -1,22 +1,23 @@
-@use '../../styles/base';
+@use '../../styles/mixins' as mixins;
+@use '../../styles/variables' as vars;
 
 .card-search {
-  @include setwidthandheight(100%, 100%);
-  @include animation(all, 2s);
-  @include setborderwithradius(2px solid $seccardcolor, 52px);
-  @include flexeddiv(column, flex-start);
-  background-color: $cardbackcolor;
+  @include mixins.setwidthandheight(100%, 100%);
+  @include mixins.animation(all, 2s);
+  @include mixins.setborderwithradius(2px solid vars.$seccardcolor, 52px);
+  @include mixins.flexeddiv(column, flex-start);
+  background-color: vars.$cardbackcolor;
   align-items: center;
   overflow: hidden;
 
   .placeholder {
-    @include animation(all, 2s);
+    @include mixins.animation(all, 2s);
     width: 100%;
     height: 46%;
   }
 
   &.searched {
-    @include flexeddiv(column, flex-start);
+    @include mixins.flexeddiv(column, flex-start);
     overflow-y: hidden;
 
     .placeholder {
@@ -24,13 +25,13 @@
     }
 
     .searchbar {
-      @include setwidthandheight(100%, 8%);
-      @include animation(all, 1s);
+      @include mixins.setwidthandheight(100%, 8%);
+      @include mixins.animation(all, 1s);
       border-radius: 0;
-      border-top: 0px solid $seccardcolor;
-      border-left: 0px solid $seccardcolor;
-      border-right: 0px solid $seccardcolor;
-      border-bottom: 2px solid $seccardcolor;
+      border-top: 0px solid vars.$seccardcolor;
+      border-left: 0px solid vars.$seccardcolor;
+      border-right: 0px solid vars.$seccardcolor;
+      border-bottom: 2px solid vars.$seccardcolor;
 
       .searchbar-image {
         margin-left: 3%;
@@ -41,26 +42,26 @@
 
         input {
           width: 90%;
-          color: $seccardcolor;
+          color: vars.$seccardcolor;
         }
       }
     }
   }
 
   .searchbar {
-    @include animationwithdelay(all, 1s, 0.5s);
+    @include mixins.animationwithdelay(all, 1s, 0.5s);
     width: 90%;
     height: 50px;
-    border: 2px $seccardcolor solid;
+    border: 2px vars.$seccardcolor solid;
     border-radius: 15px;
     text-align: center;
     display: flex;
 
     .searchbar-image {
-      @include animation(all, 2s);
+      @include mixins.animation(all, 2s);
       height: 100%;
       width: 20%;
-      border-right: 1px solid $seccardcolor;
+      border-right: 1px solid vars.$seccardcolor;
       -webkit-appearance: div;
       -moz-appearance: div;
       appearance: div;
@@ -76,7 +77,7 @@
     }
 
     .searchbar-query {
-      @include animation(all, 2s);
+      @include mixins.animation(all, 2s);
       height: 100%;
       width: 100%;
       display: flex;
@@ -84,7 +85,7 @@
       align-items: center;
 
       input {
-        color: $seccardcolor;
+        color: vars.$seccardcolor;
         width: 90%;
         height: 65%;
         border: 0;
@@ -96,12 +97,12 @@
   }
 
   .searchlist {
-    @include animation(all, 1s);
+    @include mixins.animation(all, 1s);
     width: 100%;
     height: 0;
 
     &.searched {
-      @include animation(all, 1s);
+      @include mixins.animation(all, 1s);
       height: 100%;
 
       .searchlist-buttons {
@@ -112,7 +113,7 @@
     .searchlist-buttons {
       width: 100%;
       height: 10%;
-      border-bottom: $seccardcolor solid 2px;
+      border-bottom: vars.$seccardcolor solid 2px;
       display: none;
       justify-content: space-around;
       color: white;
@@ -128,11 +129,11 @@
         justify-content: center;
 
         &:hover {
-          color: pink;
+          color: vars.$tercardcolor;
         }
 
         &.selected {
-          color: pink;
+          color: vars.$tercardcolor;
           font-weight: bold;
         }
       }
@@ -149,17 +150,17 @@
         height: 80%;
 
         &::-webkit-scrollbar {
-          @include setwidthandheight(12px, unset);
+          @include mixins.setwidthandheight(12px, unset);
         }
 
         &::-webkit-scrollbar-track {
-          @include setborderwithradius(unset, 10px);
+          @include mixins.setborderwithradius(unset, 10px);
           box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
           -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
         }
 
         &::-webkit-scrollbar-thumb {
-          @include setborderwithradius(unset, 10px);
+          @include mixins.setborderwithradius(unset, 10px);
           box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.5);
           -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.5);
         }
@@ -168,31 +169,31 @@
   }
 
   .card-big-table {
-    @include setwidthandheight(90%, 90%);
-    @include setborderwithradius(unset, 3%);
+    @include mixins.setwidthandheight(90%, 90%);
+    @include mixins.setborderwithradius(unset, 3%);
     overflow-y: scroll;
 
     &::-webkit-scrollbar {
-      @include setwidthandheight(12px, unset);
+      @include mixins.setwidthandheight(12px, unset);
     }
 
     &::-webkit-scrollbar-track {
-      @include setborderwithradius(unset, 10px);
+      @include mixins.setborderwithradius(unset, 10px);
       -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     }
 
     &::-webkit-scrollbar-thumb {
-      @include setborderwithradius(unset, 10px);
+      @include mixins.setborderwithradius(unset, 10px);
       -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     }
 
     .track {
-      @include flexeddiv(row, space-between);
+      @include mixins.flexeddiv(row, space-between);
       padding: 10px 20px;
       border-bottom: 1px solid;
 
       .track-info {
-        @include flexeddiv(column, space-around);
+        @include mixins.flexeddiv(column, space-around);
       }
 
       .track-duration {
