--- a/client/src/components/forminputs/forminput.styles.scss
+++ b/client/src/components/forminputs/forminput.styles.scss
@@ -1,4 +1,5 @@
-@use '../../styles/base';
+@use '../../styles/mixins' as mixins;
+@use '../../styles/variables' as vars;
 
 $sub-color: black;
 $main-color: black;
@@ -6,7 +7,7 @@ $main-color: black;
 %shrinkLabel {
   top: -14px;
   font-size: 12px;
-  color: $primcardcolor;
+  color: vars.$primcardcolor;
 }
 
 .group {
@@ -36,7 +37,7 @@ $main-color: black;
       &:disabled {
         background-color: transparent;
         border: none;
-        color: $seccardcolor;
+        color: vars.$seccardcolor;
       }
     }
 
