--- a/client/src/components/mainmenu/mainmenu.styles.scss
+++ b/client/src/components/mainmenu/mainmenu.styles.scss
@@ -1,4 +1,5 @@
-@use '../../styles/base';
+@use '../../styles/mixins' as mixins;
+@use '../../styles/variables' as vars;
 
 .mainmenu-cards-container {
   display: flex;
@@ -8,14 +9,14 @@
   height: 100%;
 
   .cards {
-    @include setwidthandheight(100%, unset);
-    @include flexeddiv(row, space-between);
+    @include mixins.setwidthandheight(100%, unset);
+    @include mixins.flexeddiv(row, space-between);
     flex-grow: 1;
 
     .card {
-      @include setwidthandheight(40%, 100%);
-      @include animation(all, 0.8s);
-      @include setborderwithradius(2px solid white, 30px);
+      @include mixins.setwidthandheight(40%, 100%);
+      @include mixins.animation(all, 0.8s);
+      @include mixins.setborderwithradius(2px solid white, 30px);
       z-index: 3;
       vertical-align: middle;
       background-repeat: no-repeat;
@@ -24,8 +25,9 @@
       cursor: pointer;
 
       &:hover {
-        @include setborderwithradius(2px solid pink, 30px);
-        box-shadow: 0 0 5px pink, 0 0 25px pink, 0 0 50px pink, 0 0 100px pink;
+        @include mixins.setborderwithradius(2px solid vars.$tercardcolor, 30px);
+        box-shadow: 0 0 5px vars.$tercardcolor, 0 0 25px vars.$tercardcolor,
+          0 0 50px vars.$tercardcolor, 0 0 100px vars.$tercardcolor;
       }
     }
   }
