--- a/client/src/components/review/review.styles.scss
+++ b/client/src/components/review/review.styles.scss
@@ -1,9 +1,10 @@
-@use '../../styles/base';
+@use '../../styles/mixins' as mixins;
+@use '../../styles/variables' as vars;
 
 .review-main {
-  @include setborderwithradius(1px solid $seccardcolor, 8px);
-  @include flexeddiv(row, unset);
-  @include animation(all, 0.8s);
+  @include mixins.setborderwithradius(1px solid vars.$seccardcolor, 8px);
+  @include mixins.flexeddiv(row, unset);
+  @include mixins.animation(all, 0.8s);
   color: white;
   text-align: center;
   margin-bottom: 10px;
@@ -12,9 +13,9 @@
   cursor: pointer;
 
   .review-container-main {
-    @include flexeddiv(column, space-around);
-    @include setwidthandheight(100%, 100%);
-    @include animation(opacity, 2s);
+    @include mixins.flexeddiv(column, space-around);
+    @include mixins.setwidthandheight(100%, 100%);
+    @include mixins.animation(opacity, 2s);
     border-radius: 100%;
     line-height: 200%;
     margin: 0;
@@ -22,15 +23,15 @@
   }
 
   &:hover {
-    box-shadow: 0 0 5px $seccardcolor, 0 0 25px $seccardcolor,
-      0 0 50px $seccardcolor, 0 0 100px $seccardcolor;
+    box-shadow: 0 0 5px vars.$seccardcolor, 0 0 25px vars.$seccardcolor,
+      0 0 50px vars.$seccardcolor, 0 0 100px vars.$seccardcolor;
   }
 }
 
 .review-info {
-  @include setborderwithradius(1px solid $seccardcolor, 8px);
-  @include flexeddiv(column, space-around);
-  @include animation(all, 1.4s);
+  @include mixins.setborderwithradius(1px solid vars.$seccardcolor, 8px);
+  @include mixins.flexeddiv(column, space-around);
+  @include mixins.animation(all, 1.4s);
   overflow: hidden;
   height: 18vh;
   color: white;
@@ -39,13 +40,13 @@
   margin-bottom: 10px;
 
   &.minified {
-    @include setborderwithradius(0px solid black, 8px);
+    @include mixins.setborderwithradius(0px solid black, 8px);
     height: 0;
     padding: 0;
   }
 
   textarea {
-    @include setborderwithradius(1px solid black, 4px);
+    @include mixins.setborderwithradius(1px solid black, 4px);
     height: 100px;
     overflow-y: auto;
     resize: none;
