--- a/client/src/components/shared/back-button/back-button.styles.scss
+++ b/client/src/components/shared/back-button/back-button.styles.scss
@@ -1,10 +1,11 @@
-@use '../../../styles/base';
+@use '../../../styles/mixins' as mixins;
+@use '../../../styles/variables' as vars;
 
 .btn-back {
-  @include animation(box-shadow, 0.3s);
-  @include setwidthandheight(55px, 55px);
-  @include setborderwithradius(1px solid $seccardcolor, 12px);
-  box-shadow: 0 0 5px $seccardcolor, 0 0 25px $seccardcolor;
+  @include mixins.animation(box-shadow, 0.3s);
+  @include mixins.setwidthandheight(55px, 55px);
+  @include mixins.setborderwithradius(1px solid vars.$seccardcolor, 12px);
+  box-shadow: 0 0 5px vars.$seccardcolor, 0 0 25px vars.$seccardcolor;
   position: absolute;
   margin-left: 3%;
   cursor: pointer;
@@ -13,11 +14,12 @@
   background-repeat: no-repeat;
 
   &:hover {
-    background-color: pink;
-    border: 1px solid pink;
+    background-color: vars.$tercardcolor;
+    border: 1px solid vars.$tercardcolor;
     background-image: url('http://localhost:3000/images/play.svg') !important;
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
-    box-shadow: 0 0 5px pink, 0 0 25px pink, 0 0 50px pink;
+    box-shadow: 0 0 5px vars.$tercardcolor, 0 0 25px vars.$tercardcolor,
+      0 0 50px vars.$tercardcolor;
   }
 }
