--- a/client/src/components/shared/notification/notification.styles.scss
+++ b/client/src/components/shared/notification/notification.styles.scss
@@ -1,3 +1,5 @@
+@use '../../../styles/variables' as vars;
+
 .notification-container {
   margin: 20px;
   color: white;
@@ -46,7 +48,7 @@
     }
 
     &.error {
-      background-color: pink;
+      background-color: vars.$tercardcolor;
     }
 
     &.warning {
@@ -54,11 +56,11 @@
     }
 
     &.information {
-      background-color: $seccardcolor;
+      background-color: vars.$seccardcolor;
     }
 
     &.success {
-      background-color: $primcardcolor;
+      background-color: vars.$primcardcolor;
     }
 
     @media screen and (orientation: portrait) {
