--- a/client/src/components/shared/switch/switch.styles.scss
+++ b/client/src/components/shared/switch/switch.styles.scss
@@ -1,15 +1,15 @@
-@use '../../../styles/base';
+@use '../../../styles/mixins' as mixins;
 
 // The switch - the box around the slider
 .switch {
-  @include setwidthandheight(35px, 100%);
+  @include mixins.setwidthandheight(35px, 100%);
   position: relative;
   display: inline-block;
 }
 
 // Hide default HTML checkbox
 .switch input {
-  @include setwidthandheight(0, 0);
+  @include mixins.setwidthandheight(0, 0);
   opacity: 0;
 }
 
@@ -28,7 +28,7 @@
 }
 
 .slider:before {
-  @include setwidthandheight(10px, 55%);
+  @include mixins.setwidthandheight(10px, 55%);
   position: absolute;
   content: '';
   left: 4px;
