--- a/client/src/components/track/track.styles.scss
+++ b/client/src/components/track/track.styles.scss
@@ -1,18 +1,19 @@
-@use '../../styles/base';
+@use '../../styles/mixins' as mixins;
+@use '../../styles/variables' as vars;
 
 .track {
-  @include flexeddiv(row, space-between);
+  @include mixins.flexeddiv(row, space-between);
   padding: 10px 20px;
   border-bottom: 1px solid;
   cursor: pointer;
   height: 60px;
 
   &:hover {
-    background-color: $seccardcolor;
+    background-color: vars.$seccardcolor;
   }
 
   .track-info {
-    @include flexeddiv(column, space-around);
+    @include mixins.flexeddiv(column, space-around);
   }
 
   .track-duration {
