--- a/client/src/components/review/review.styles.scss
+++ b/client/src/components/review/review.styles.scss
@@ -1,5 +1,5 @@
-@use '../../styles/mixins' as mixins;
-@use '../../styles/variables' as vars;
+@use 'styles/mixins' as mixins;
+@use 'styles/variables' as vars;
 
 .review-main {
   @include mixins.setborderwithradius(1px solid vars.$seccardcolor, 8px);
