--- a/client/src/components/forminputs/forminput.styles.scss
+++ b/client/src/components/forminputs/forminput.styles.scss
@@ -1,5 +1,5 @@
-@use '../../styles/mixins' as mixins;
-@use '../../styles/variables' as vars;
+@use 'styles/mixins' as mixins;
+@use 'styles/variables' as vars;
 
 $sub-color: black;
 $main-color: black;
