--- a/client/src/components/shared/back-button/back-button.styles.scss
+++ b/client/src/components/shared/back-button/back-button.styles.scss
@@ -1,5 +1,5 @@
-@use '../../../styles/mixins' as mixins;
-@use '../../../styles/variables' as vars;
+@use 'styles/mixins' as mixins;
+@use 'styles/variables' as vars;
 
 .btn-back {
   @include mixins.animation(box-shadow, 0.3s);
