--- a/client/src/components/track-analysis/track-analysis.styles.scss
+++ b/client/src/components/track-analysis/track-analysis.styles.scss
@@ -1,5 +1,5 @@
-@use '../../styles/mixins' as mixins;
-@use '../../styles/variables' as vars;
+@use 'styles/mixins' as mixins;
+@use 'styles/variables' as vars;
 
 canvas {
   @include mixins.setwidthandheight(100%, 100px);
