--- a/client/src/components/track/track.styles.scss
+++ b/client/src/components/track/track.styles.scss
@@ -1,5 +1,5 @@
-@use '../../styles/mixins' as mixins;
-@use '../../styles/variables' as vars;
+@use 'styles/mixins' as mixins;
+@use 'styles/variables' as vars;
 
 .track {
   @include mixins.flexeddiv(row, space-between);
