--- a/client/src/components/cards/card-music/card-music.styles.scss
+++ b/client/src/components/cards/card-music/card-music.styles.scss
@@ -1,11 +1,10 @@
+@use 'components/cards/card-styles.scss';
 @use 'styles/mixins' as mixins;
 @use 'styles/variables' as vars;
 
 .card-music {
-  @include mixins.setwidthandheight(100%, 100%);
-  @include mixins.setborderwithradius(2px solid vars.$primcardcolor, 52px);
+  @extend %card-primary-base;
   @include mixins.flexeddiv(column, space-evenly);
-  background-color: vars.$cardbackcolor;
 
   .card-big-cover-container {
     @include mixins.setwidthandheight(230px, 230px);
