--- a/client/src/components/cards/card-search/card-search.styles.scss
+++ b/client/src/components/cards/card-search/card-search.styles.scss
@@ -1,19 +1,22 @@
+@use 'components/cards/card-styles.scss';
 @use 'styles/mixins' as mixins;
 @use 'styles/variables' as vars;
 
+%appearance {
+  -webkit-appearance: div;
+  -moz-appearance: div;
+  appearance: div;
+}
+
 .card-search {
-  @include mixins.setwidthandheight(100%, 100%);
+  @extend %card-secondary-base;
+  @include mixins.flexeddiv(column, flex-start, center);
   @include mixins.animation(all, 2s);
-  @include mixins.setborderwithradius(2px solid vars.$seccardcolor, 52px);
-  @include mixins.flexeddiv(column, flex-start);
-  background-color: vars.$cardbackcolor;
-  align-items: center;
   overflow: hidden;
 
   .placeholder {
     @include mixins.animation(all, 2s);
-    width: 100%;
-    height: 46%;
+    @include mixins.setwidthandheight(100%, 46%);
   }
 
   &.searched {
@@ -27,10 +30,7 @@
     .searchbar {
       @include mixins.setwidthandheight(100%, 8%);
       @include mixins.animation(all, 1s);
-      border-radius: 0;
-      border-top: 0px solid vars.$seccardcolor;
-      border-left: 0px solid vars.$seccardcolor;
-      border-right: 0px solid vars.$seccardcolor;
+      @include mixins.setborderwithradius(0px solid vars.$seccardcolor, 0);
       border-bottom: 2px solid vars.$seccardcolor;
 
       .searchbar-image {
@@ -49,26 +49,20 @@
   }
 
   .searchbar {
-    @include mixins.animationwithdelay(all, 1s, 0.5s);
-    width: 90%;
-    height: 50px;
-    border: 2px vars.$seccardcolor solid;
-    border-radius: 15px;
+    @include mixins.setwidthandheight(90%, 50px);
+    @include mixins.animation(all, 1s);
+    @include mixins.setborderwithradius(2px solid vars.$seccardcolor, 15px);
     text-align: center;
     display: flex;
 
     .searchbar-image {
+      @include mixins.setwidthandheight(20%, 100%);
       @include mixins.animation(all, 2s);
-      height: 100%;
-      width: 20%;
+      @extend %appearance;
       border-right: 1px solid vars.$seccardcolor;
-      -webkit-appearance: div;
-      -moz-appearance: div;
-      appearance: div;
 
       .searchbar-image-button {
-        width: 100%;
-        height: 100%;
+        @include mixins.setwidthandheight(100%, 100%);
         background-color: transparent;
         border: 0;
         outline: none;
@@ -78,16 +72,12 @@
 
     .searchbar-query {
       @include mixins.animation(all, 2s);
-      height: 100%;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      @include mixins.flexeddiv(row, center, center);
+      @include mixins.setwidthandheight(100%, 100%);
 
       input {
+        @include mixins.setwidthandheight(90%, 65%);
         color: vars.$seccardcolor;
-        width: 90%;
-        height: 65%;
         border: 0;
         font-size: x-large;
         outline: none;
@@ -98,35 +88,29 @@
 
   .searchlist {
     @include mixins.animation(all, 1s);
-    width: 100%;
-    height: 0;
+    @include mixins.setwidthandheight(100%, 0);
 
     &.searched {
       @include mixins.animation(all, 1s);
       height: 100%;
 
       .searchlist-buttons {
-        display: flex;
+        @include mixins.flexeddiv(row, space-around);
       }
     }
 
     .searchlist-buttons {
-      width: 100%;
-      height: 10%;
+      @include mixins.setwidthandheight(100%, 10%);
       border-bottom: vars.$seccardcolor solid 2px;
       display: none;
-      justify-content: space-around;
       color: white;
 
       .button {
+        @include mixins.flexeddiv(column, center, center);
         width: 80px;
         cursor: pointer;
         margin: 5px 0px;
         border-radius: 8px;
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
 
         &:hover {
           color: vars.$tercardcolor;
@@ -139,31 +123,14 @@
       }
     }
     .searchlist-list {
-      width: 100%;
-      height: 90%;
+      @include mixins.setwidthandheight(100%, 90%);
       color: white;
 
       .searchlist-tracks {
-        overflow-y: scroll;
+        overflow-y: auto;
         overflow-x: hidden;
         margin: 10px 0px;
         height: 80%;
-
-        &::-webkit-scrollbar {
-          @include mixins.setwidthandheight(12px, unset);
-        }
-
-        &::-webkit-scrollbar-track {
-          @include mixins.setborderwithradius(unset, 10px);
-          box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
-          -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
-        }
-
-        &::-webkit-scrollbar-thumb {
-          @include mixins.setborderwithradius(unset, 10px);
-          box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.5);
-          -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.5);
-        }
       }
     }
   }
@@ -171,21 +138,7 @@
   .card-big-table {
     @include mixins.setwidthandheight(90%, 90%);
     @include mixins.setborderwithradius(unset, 3%);
-    overflow-y: scroll;
-
-    &::-webkit-scrollbar {
-      @include mixins.setwidthandheight(12px, unset);
-    }
-
-    &::-webkit-scrollbar-track {
-      @include mixins.setborderwithradius(unset, 10px);
-      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    }
-
-    &::-webkit-scrollbar-thumb {
-      @include mixins.setborderwithradius(unset, 10px);
-      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-    }
+    overflow-y: auto;
 
     .track {
       @include mixins.flexeddiv(row, space-between);
