--- a/client/src/components/cards/card-signin/card-signin.styles.scss
+++ b/client/src/components/cards/card-signin/card-signin.styles.scss
@@ -1,11 +1,7 @@
-@use 'styles/mixins' as mixins;
-@use 'styles/variables' as vars;
+@use 'components/cards/card-styles.scss';
 
 .card-signin {
-  @include mixins.setwidthandheight(100%, 100%);
-  @include mixins.setborderwithradius(2px solid vars.$primcardcolor, 52px);
-  @include mixins.flexeddiv(column, space-around);
-  background-color: vars.$cardbackcolor;
+  @extend %card-primary;
 
   form {
     margin: auto 15%;
