--- a/client/src/components/changingcards/changingcards.styles.scss
+++ b/client/src/components/changingcards/changingcards.styles.scss
@@ -33,17 +33,42 @@
   }
 
   .card-big-blur {
-    @include mixins.setwidthandheight(100%, 100%);
     @include mixins.setborderwithradius(unset, 52px);
-    @include mixins.animation(backdrop-filter, 2s);
     position: absolute;
-    backdrop-filter: blur(10px);
     cursor: pointer;
 
+    @supports (
+      (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))
+    ) {
+      @include mixins.setwidthandheight(99.81%, 99.76%);
+      @include mixins.animation(backdrop-filter, 2s);
+      backdrop-filter: blur(5px);
+
+      &.disabled {
+        backdrop-filter: unset;
+      }
+    }
+
+    @supports (
+      (not (-webkit-backdrop-filter: blur(10px))) and
+        (not (backdrop-filter: blur(10px)))
+    ) {
+      @include mixins.setwidthandheight(100%, 100%);
+      @include mixins.animation(opacity, 2s);
+      box-shadow: inset 0 0 30px gray;
+      filter: blur(2px);
+      background: rgba(21, 21, 39, 0.9);
+
+      &.disabled {
+        box-shadow: none;
+        filter: none;
+        opacity: 0;
+      }
+    }
+
     &.disabled {
-      @include mixins.animationwithdelay(all, 0.1s, 0.5s);
-      backdrop-filter: unset;
-      width: 0;
+      @include mixins.animation(all, 0.1s, 0.5s);
+      cursor: default;
     }
   }
 }
