--- a/client/src/components/custombutton/custombutton.styles.scss
+++ b/client/src/components/custombutton/custombutton.styles.scss
@@ -1,23 +1,18 @@
+@use 'styles/mixins' as mixins;
 @use 'styles/variables' as vars;
 
 .custombutton {
-  width: 100%;
+  @include mixins.flexeddiv(row, center);
+  @include mixins.setwidthandheight(100%, auto);
+  @include mixins.setborderwithradius(2px solid vars.$primcardcolor, 6px);
+  @include mixins.animation(all, 0.5s);
   letter-spacing: 0.5px;
-  height: auto;
   line-height: 26px;
   padding: 0 10%;
   background-color: vars.$primcardcolor;
   color: black;
-  border: none;
-  border-radius: 6px;
   cursor: pointer;
-  display: flex;
-  justify-content: center;
-  border: 2px solid vars.$primcardcolor;
   font-size: 11pt;
-  transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
 
   &:hover {
     background-color: transparent;
