--- a/client/src/components/cards/card-search/card-search.styles.scss
+++ b/client/src/components/cards/card-search/card-search.styles.scss
@@ -126,32 +126,11 @@
       @include mixins.setwidthandheight(100%, 90%);
       color: white;
 
-      .searchlist-tracks {
+      .searchlist-results {
         overflow-y: auto;
         overflow-x: hidden;
         margin: 10px 0px;
         height: 80%;
-      }
-    }
-  }
-
-  .card-big-table {
-    @include mixins.setwidthandheight(90%, 90%);
-    @include mixins.setborderwithradius(unset, 3%);
-    overflow-y: auto;
-
-    .track {
-      @include mixins.flexeddiv(row, space-between);
-      padding: 10px 20px;
-      border-bottom: 1px solid;
-
-      .track-info {
-        @include mixins.flexeddiv(column, space-around);
-      }
-
-      .track-duration {
-        vertical-align: middle;
-        border-radius: 100%;
       }
     }
   }
