changed styles to fix production build

--- a/client/src/components/cards/cards-search/card-search-users/search-users.styles.scss
+++ b/client/src/components/cards/cards-search/card-search-users/search-users.styles.scss
@@ -12,7 +12,7 @@
     background-color: vars.$seccardcolor;
   }
 
-  .user-info {
+  .user-search-info {
     @include mixins.flexeddiv(column, space-around);
     width: 40%;
     .user {
