--- a/client/src/components/user/user.styles.scss
+++ b/client/src/components/user/user.styles.scss
@@ -19,7 +19,7 @@
     line-height: 200%;
     margin: 0;
     @include mixins.setwidthandheight(100%, 100%);
-    opacity: 100%;
+    opacity: 1;
     @include mixins.animation(opacity, 2s);
     word-break: break-word;
   }
