updated shared styles

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -2,3 +2,6 @@ $primcardcolor: #94dadc;
 $seccardcolor: #609ae4;
 $tercardcolor: pink;
 $cardbackcolor: #151527;
+$exclamationcolor: red;
+$blankcolor: white;
+$filledcolor: black;
